--- a/styles.css
+++ b/styles.css
@@ -203,12 +203,13 @@ li:hover {
     transition: transform 0.5s;
 }
 .banner {
-    background-image: url(./images/coffeebeans2.jpg);
+    background-image: url(./images/coffeebeans4.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     padding: 2rem;
     text-align: left;
-    color: brown;
+    color: rgb(79, 38, 38);
     height: 50vh;
     display: flex;
     justify-content: center;
